fix: find by client_id when verifying jwt